New elements of the squeleton

--- a/private/buy.html
+++ b/private/buy.html
@@ -3,6 +3,8 @@
     <title>SyllaExchange</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/logo.icon">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
     <header>
       <a href="/private/index.html">
@@ -20,14 +22,22 @@
 <body>
     <hr>
 
-    <ul>
-        <li>img</li>
-        <li>name</li>
-        <li>desc</li>
-        <li>price</li>
-        <li>sellor</li>
-        <li>state</li>
-        <li>message</li>
-        <li>btn buys</li>
-    </ul>
+    <h2>Probabilités pour Scientifiques et Ingénieurs (2ème éd.)</h2>
+
+    <input type="button" value="Acheter pour 25€">
+
+    <p>Livre en parfait état. Probabilités pour Scientifiques et Ingénieurs (2ème éd.) pour le cours de probabilités et de statistique. Quelques notes sont notés dans le livre au chapitre 4, 5 et 7</p>
+
+    <img class="logo" src="images/ex.jpg" alt="SyllaExchange-Logo">
+
+    <h4>Seller: </h4> <p>EmilienV05</p>
+
+    <h4>Si nécessaire, ce texte apparait en rouge</h4>
+
+    <h2>Star Rating</h2>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star"></span>
 </body>
