--- a/private/sell.html
+++ b/private/sell.html
@@ -12,6 +12,7 @@
       <h1 class="title"><a href="/private/index.html" id="title_link">SyllaExchange</a></h1>
   
       <!--  <%=user %>  -->
+      <!-- lien pour upload img: https://www.bezkoder.com/node-js-upload-image-mysql/ -->
       <input type="button" value="connexion" id="connexion" onclick="location.href='/private/login.html';">
   
     </header>
@@ -20,13 +21,38 @@
 <body>
     <hr>
 
-    <ul>
-        <li>img</li>
-        <li>name</li>
-        <li>desc</li>
-        <li>price</li>
-        <li>state</li>
-        <li>message</li>
-        <li>btn sell</li>
-    </ul>
+    <form>
+      <label for="title">Titre:</label>
+      <input type="text" name="title" placeholder="Titre" required/>
+
+      <label for="description">Description:</label>
+      <textarea name="description" placeholder="Description" cols="25" rows="5" style="height:200px" required></textarea>
+
+      <label for="price">Price:</label>
+      <input type="number" name="price" min="0" placeholder="Price" required/>
+
+      <label for="img">Image:</label>
+      <input type="file" name="img" placeholder="Image" required/>
+
+      <div class="star-rating">
+        <input type="radio" name="stars" id="star-a" value="5"/>
+        <label for="star-a"></label>
+
+        <input type="radio" name="stars" id="star-b" value="4"/>
+        <label for="star-b"></label>
+
+        <input type="radio" name="stars" id="star-c" value="3"/>
+        <label for="star-c"></label>
+
+        <input type="radio" name="stars" id="star-d" value="2"/>
+        <label for="star-d"></label>
+
+        <input type="radio" name="stars" id="star-e" value="1"/>
+        <label for="star-e"></label>
+      </div>
+
+      <button type="submit">Submit</button>
+      
+    </form>
+    
 </body>
