--- a/private/buy.html
+++ b/private/buy.html
@@ -22,22 +22,23 @@
 <body>
     <hr>
 
-    <h2>Probabilités pour Scientifiques et Ingénieurs (2ème éd.)</h2>
+    <h2 class="Name">Probabilités pour Scientifiques et Ingénieurs (2ème éd.)</h2>
+    <div class="selling">
+      <img class="imagedulivre" src="images/ex.jpg" alt="SyllaExchange-Logo">
+      <div class="txt">
+        <input class="btnAchter" type="button" value="Acheter pour 25€">
+        <p class="resume">Livre en parfait état. Probabilités pour Scientifiques et Ingénieurs (2ème éd.) pour le cours de probabilités et de statistique. Quelques notes sont notés dans le livre au chapitre 4, 5 et 7 <hr width="100%" color="black"></p>
+        <h4 class="SELLER">Seller: </h4> <p>EmilienV05</p>
+      </div>
+    </div>
 
-    <input type="button" value="Acheter pour 25€">
 
-    <p>Livre en parfait état. Probabilités pour Scientifiques et Ingénieurs (2ème éd.) pour le cours de probabilités et de statistique. Quelques notes sont notés dans le livre au chapitre 4, 5 et 7</p>
-
-    <img class="logo" src="images/ex.jpg" alt="SyllaExchange-Logo">
-
-    <h4>Seller: </h4> <p>EmilienV05</p>
-
-    <h4>Si nécessaire, ce texte apparait en rouge</h4>
-
-    <h2>Star Rating</h2>
-    <span class="fa fa-star checked"></span>
-    <span class="fa fa-star checked"></span>
-    <span class="fa fa-star checked"></span>
-    <span class="fa fa-star checked"></span>
-    <span class="fa fa-star"></span>
+    <div class="Star">
+      <h2>Star Rating</h2>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star"></span>
+    </div>
 </body>
