--- a/private/index.html
+++ b/private/index.html
@@ -32,43 +32,66 @@
       </form>
     </div>
 
-    <select name="order">
+    <select class="order" name="order">
       <option value="" selected="selected" hidden="hidden">Order By</option>
       <option value="dog">Name</option>
       <option value="cat">Price</option>
       <option value="hamster">Date</option>
   </select>
 
-  <table align="center">
-    <tr>
-      <th>Image</th>
-      <th>Name</th>
-      <th>Price</th>
-    </tr>
+  <div class="catalogue">
+    <img class="arrow" src="/private/images/FlêcheG.png" alt="">
+    <div class="items">
+      <p class="Book_name">Titre livre</p>
+      <img src="/private/images/livre1.png" alt="" class="books">
+      <div class="info">
+        <h2 class="prix">20$</h2>
+        <h2 class="description">mathématique pour m'économie</h2>
+        <h2 class="vendeur"> vendu par Charles</h2>
+      </div>
+      <button class="achter">
+        achter
+      </button>
+    </div>
+    <div class="items">
+      <p class="Book_name">Titre livre</p>
+      <img src="/private/images/ex.jpg" alt="" class="books">
+      <div class="info">
+        <h2 class="prix">20$</h2>
+        <h2 class="description">mathématique pour m'économie</h2>
+        <h2 class="vendeur"> vendu par Charles</h2>
+      </div>
+      <button class="achter">
+        achter
+      </button>
+    </div>
+    <div class="items">
+      <p class="Book_name">Titre livre</p>
+      <img src="/private/images/livre1.png" alt="" class="books">
+      <div class="info">
+        <h2 class="prix">20$</h2>
+        <h2 class="description">mathématique pour m'économie</h2>
+        <h2 class="vendeur"> vendu par Charles</h2>
+      </div>
+      <button class="achter">
+        achter
+      </button>
 
-    <tr>
-      <td>
-        <img class="logo" src="images/ex.jpg" alt="SyllaExchange-Logo">
-      </td>
-      <td>
-        <p>Proba</p>
-      </td>
-      <td>
-        <input type="button" value="Acheter pour 25€" onclick="location.href='/private/buy.html';">
-      </td>
-    </tr>
-
-    <td>
-      <p>other image</p>
-    </td>
-    <td>
-      <p>appsinf</p>
-    </td>
-    <td>
-      <input type="button" value="Acheter pour 5€" onclick="location.href='/private/buy.html';">
-    </td>
-  </tr>
-  </table>
+    </div>
+    <div class="items">
+      <p class="Book_name">Titre livre</p>
+      <img src="/private/images/livre2.png" alt="" class="books">
+      <div class="info">
+        <h2 class="prix">20$</h2>
+        <h2 class="description">mathématique pour m'économie</h2>
+        <h2 class="vendeur"> vendu par Charles</h2>
+      </div>
+      <button class="achter">
+        achter
+      </button>
+    </div>
+    <img class="arrow" src="/private/images/FlêcheD.png" alt="">
+  </div>
 
 
 </body>
