--- a/private/profil.html
+++ b/private/profil.html
@@ -25,30 +25,30 @@
   
     <main>
         <div class="login_signup_form">
-            <h2 class="text">My Account</h2>
+            <h2 class="text"><strong>My Account</strong></h2>
         
             <form action="/login" method="post">
                 <label class="control-label" for="new_username">New Username: </label>
                 <input type="text" id="new_username" name="new_username" placeholder="New Username" class="form-control" required/>
-                <button class="btn btn-success" type="submit">Modify</button>
+                <button class="btn-success" type="submit">Modify</button>
             </form>
 
             <form>
                 <label class="control-label" for="new_email">New Email: </label>
                 <input type="text" id="new_email" name="new_email" placeholder="New Email" class="form-control" required/>
-                <button class="btn btn-success" type="submit">Modify</button>
+                <button class="btn-success" type="submit">Modify</button>
             </form>
 
             <form>
                 <label class="control-label" for="new_password">New Password: </label>
                 <input type="text" id="new_password" name="new_password" placeholder="New Password" class="form-control" required/>
-                <button class="btn btn-success" type="submit">Modify</button>
+                <button class="btn-success" type="submit">Modify</button>
             </form>
 
             <form>
                 <label class="control-label" for="new_money">New Money: </label>
                 <input type="text" id="new_money" name="new_money" placeholder="New Money" class="form-control" required/>
-                <button class="btn btn-success" type="submit">Modify</button>
+                <button class="btn-success" type="submit">Modify</button>
             </form>
         </div>
   
