--- a/private/sell.html
+++ b/private/sell.html
@@ -21,17 +21,17 @@
 <body>
     <hr>
 
-    <form>
-      <label for="title">Titre:</label>
+    <form class="SellProduct">
+      <label for="title"> <strong>Titre:</strong>  </label>
       <input type="text" name="title" placeholder="Titre" required/>
 
-      <label for="description">Description:</label>
+      <label for="description"><strong>Description:</strong></label>
       <textarea name="description" placeholder="Description" cols="25" rows="5" style="height:200px" required></textarea>
 
-      <label for="price">Price:</label>
+      <label for="price"><strong>Price:</strong></label>
       <input type="number" name="price" min="0" placeholder="Price" required/>
 
-      <label for="img">Image:</label>
+      <label for="img"><strong>Image:</strong></label>
       <input type="file" name="img" placeholder="Image" required/>
 
       <div class="star-rating">
